Implemented date to text conversion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">My Costs</string>
     <string name="action_settings">Settings</string>
+    <string name="today_s">Today\'s</string>
+    <string name="yesterday_s">Yesterday\'s</string>
+    <string name="total_expenses">%1$s total expenses</string>
 </resources>
