--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="today_s">Today\'s</string>
     <string name="yesterday_s">Yesterday\'s</string>
     <string name="total_expenses">%1$s total expenses</string>
+    <string name="cost">%1$s cost</string>
     <string name="title_activity_add_cost">Add cost</string>
 
     <string-array name="category_array">
