Improved the design of the add-cost screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
         <item>Transfer</item>
         <item>Transportation</item>
         <item>Utilities</item>
+        <item>Other</item>
     </string-array>
 </resources>
