Redesigned the UI of the cost list, added a new view model and its converter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="today_s">Today\'s</string>
     <string name="yesterday_s">Yesterday\'s</string>
-    <string name="total_expenses">%1$s total expenses</string>
+    <string name="total_expenses">%1$s total costs</string>
     <string name="cost">%1$s cost</string>
     <string name="title_activity_add_cost">Add cost</string>
 
