--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">My Costs</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+    <string name="action_add_cost">Add new cost</string>
     <string name="today_s">Today\'s</string>
     <string name="yesterday_s">Yesterday\'s</string>
     <string name="total_expenses">%1$s total costs</string>
