Replaced the dummy in-memory database with a real database using DBFlow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
         <item>Transfer</item>
         <item>Transportation</item>
         <item>Utilities</item>
+        <item>Bills</item>
         <item>Other</item>
     </string-array>
 
